{
  "version": 4,
  "terraform_version": "1.5.6",
  "serial": 207,
  "lineage": "5c4c9e7a-4465-258b-f6bd-5e8a63e31a8d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "instance_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06a492033d8c31c02",
            "arn": "arn:aws:ec2:ap-southeast-2:721431533455:elastic-ip/eipalloc-06a492033d8c31c02",
            "domain": "vpc",
            "id": "eipalloc-06a492033d8c31c02",
            "network_border_group": "ap-southeast-2",
            "public_dns": "ec2-54-79-175-81.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "54.79.175.81",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "kunal-api-demo-eip"
            },
            "tags_all": {
              "Name": "kunal-api-demo-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "api_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06034af58ad737d58",
            "arn": "arn:aws:ec2:ap-southeast-2:721431533455:instance/i-051bb17f373ed8e06",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-051bb17f373ed8e06",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "aws-elasticache-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c99752a0feb60bfc",
            "private_dns": "ip-10-0-1-202.ap-southeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.202",
            "public_dns": "ec2-3-26-26-149.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "3.26.26.149",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c7a14529f5f4e20c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07a27bb1f055ac458",
            "tags": {
              "Name": "kunal-api-demo-ec2"
            },
            "tags_all": {
              "Name": "kunal-api-demo-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ae6cd913a645024c"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_security_group.instance_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:721431533455:internet-gateway/igw-07b13dab0fccb9a87",
            "id": "igw-07b13dab0fccb9a87",
            "owner_id": "721431533455",
            "tags": {
              "Name": "kunal-api-demo-igw"
            },
            "tags_all": {
              "Name": "kunal-api-demo-igw"
            },
            "vpc_id": "vpc-0d3e55bad5bb15502"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:721431533455:route-table/rtb-022491f5743d1cb8c",
            "id": "rtb-022491f5743d1cb8c",
            "owner_id": "721431533455",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07b13dab0fccb9a87",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "kunal-api-demo-public-rt"
            },
            "tags_all": {
              "Name": "kunal-api-demo-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d3e55bad5bb15502"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09fe52c5d90cdc15c",
            "route_table_id": "rtb-022491f5743d1cb8c",
            "subnet_id": "subnet-07a27bb1f055ac458"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:721431533455:security-group/sg-0ae6cd913a645024c",
            "description": "Allow SSH, HTTP, and HTTPS traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ae6cd913a645024c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "kunal-api-demo-sg",
            "name_prefix": "",
            "owner_id": "721431533455",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kunal-api-demo-sg"
            },
            "tags_all": {
              "Name": "kunal-api-demo-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d3e55bad5bb15502"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:721431533455:subnet/subnet-07a27bb1f055ac458",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07a27bb1f055ac458",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "721431533455",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kunal-api-demo-public-subnet"
            },
            "tags_all": {
              "Name": "kunal-api-demo-public-subnet"
            },
            "vpc_id": "vpc-0d3e55bad5bb15502"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:721431533455:vpc/vpc-0d3e55bad5bb15502",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05b4f8f92164a91e5",
            "default_route_table_id": "rtb-03ef772d0974adaf8",
            "default_security_group_id": "sg-05ce64e6a53ce2ea3",
            "dhcp_options_id": "dopt-8efa83e9",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d3e55bad5bb15502",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03ef772d0974adaf8",
            "owner_id": "721431533455",
            "tags": {
              "Name": "kunal-api-demo-vpc"
            },
            "tags_all": {
              "Name": "kunal-api-demo-vpc"
            }
          }
        }
      ]
    }
  ]
}